assert-struct/tests/snapshots/tuples__tuple_long_values.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/long_values.rs:25:17
   |
25 |                 1000,
   |                 ^^^^ got 999
26 |                 "different_but_also_very_long_string_that_needs_truncation",
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ got "this_is_a_very_long_string_that_should_be_truncated_in_the_error_output"
27 |                 true
   |                 ^^^^ got false
